crates/macro-tests/tests/snapshots/create_offer__default.snap
---
source: crates/macros/tests/create_offer.rs
assertion_line: 36
expression: "&request"
---
credential_issuer: "http://vercre.io"
credential_configuration_ids:
  - EmployeeID_JWT
pre-authorize: false
tx_code_required: false
send_type: ByVal
